--- a/app/src/main/res/layout/a_login.xml
+++ b/app/src/main/res/layout/a_login.xml
@@ -10,12 +10,7 @@
     >
 
 
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
-
-        <ImageView
+    <ImageView
             android:layout_width="99dp"
             android:layout_height="92dp"
             android:layout_gravity="center_horizontal"
@@ -24,28 +19,26 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="30dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/nimWid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:layout_marginLeft="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
-            app:hintEnabled="false">
+            android:layout_marginBottom="20dp"
+            >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/NIM"
+                android:id="@+id/t_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="17"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
                 android:hint="@string/un"
-                android:inputType="textPersonName"
-                android:padding="14dp"
-                android:textColor="#222222"
-                android:textColorHint="#666666" />
+                android:inputType="textPersonName" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,36 +46,31 @@
             android:id="@+id/passWid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-             android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
-            app:hintEnabled="false"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="#444444">
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/Pass"
+                android:id="@+id/t_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="12"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
                 android:hint="@string/ps"
-                android:inputType="textPassword"
-                android:padding="14dp"
-                android:textColor="#222222"
-                android:textColorHint="#555555" />
+                android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/LOGIN"
+            android:id="@+id/b_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="32dp"
-            android:background="@color/colorPrimary"
+            android:background="#1181F6"
             android:padding="14dp"
             android:text="@string/si"
             android:textColor="@color/white"
