--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+   >
 
     <item android:drawable="@color/white" />
 
@@ -8,7 +8,8 @@
     <bitmap
 
         android:gravity="center"
-            android:src="@drawable/android" />
+            android:src="@drawable/android"
+        />
     </item>
 
 </layer-list>
