--- a/app/src/main/res/layout/a_login.xml
+++ b/app/src/main/res/layout/a_login.xml
@@ -71,7 +71,8 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="32dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/btn_rounded"
+            android:backgroundTint="@color/colorPrimary"
             android:padding="14dp"
             android:text="@string/si"
             android:textColor="@color/white"
