--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,8 +17,16 @@
             android:icon="@drawable/nav_riwayat"
             android:title="@string/menu_riwayat" />
         <item
+            android:id="@+id/nav_barang"
+            android:icon="@drawable/nav_barang"
+            android:title="@string/menu_barang" />
+        <item
+            android:id="@+id/nav_pegawai"
+            android:icon="@drawable/nav_pegawai"
+            android:title="@string/menu_pegawai" />
+        <item
             android:id="@+id/nav_grafik"
-            android:icon="@drawable/nav_laporan"
+            android:icon="@drawable/nav_grafik"
             android:title="@string/menu_grafik" />
 
         <item
